<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_input_hint"/>
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_input_hint"/>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
