<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/input_top_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/tag_icon_description"
            android:src="@drawable/tag_icon" />

        <Button
            android:id="@+id/tag_select_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true" />

        <Button
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#0af"
            android:text="@string/message_send_text"
            android:textColor="#fff" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/input_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/input_top_option_layout"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp" >

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0000"
            android:hint="@string/input_text_hint"
            android:inputType="textMultiLine" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/file_thumbail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_scroll_view"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal" >

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/input_bottom_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/file_thumbail_layout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/file_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:background="@android:drawable/ic_menu_upload"
            android:contentDescription="@string/source_code_upload_icon_description" />
    </RelativeLayout>

</RelativeLayout>